--- a/lesson3/views/index.ejs
+++ b/lesson3/views/index.ejs
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <%- include('./partials/head.ejs') %>
+    <%- include('./partials/head.ejs') %>
 <body>
-
-  <%- include('./partials/nav.ejs') %>
+    <%- include('./partials/nav.ejs') %>
 
   <div class="blogs content">
     <h2>All Blogs</h2>
     <% if (blogs.length > 0) { %>
       <% blogs.forEach(blog => { %>
-        
+        <a class="single" href="/blogs/<%= blog._id%>">
         <h3 class="title"><%= blog.title %></h3>
         <p class="snippet"><%= blog.snippet %></p>
-
+        </a>
       <% }) %>
     <% } else { %>
       <p>There are no blogs to display...</p>
