finish node js start course

--- a/lesson3/views/partials/nav.ejs
+++ b/lesson3/views/partials/nav.ejs
@@ -6,6 +6,6 @@
     <ul>
       <li><a href="/">Blogs</a></li>
       <li><a href="/about">About</a></li>
-      <li><a href="/blog/create">New Blogs</a></li>
+      <li><a href="/blogs/create">New Blogs</a></li>
     </ul>
   </nav>
