--- a/lesson3/views/blogs/about.ejs
+++ b/lesson3/views/blogs/about.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs') %>
+    <%- include('../partials/head.ejs') %>
 <body>
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="about content">
         <h2>About Us</h2>
@@ -11,7 +11,7 @@
         <p>About us 3</p>
     </div>
 
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
 </body>
 </html>
